hphp/test/zend/good/ext/gd/tests/imagecolorstotal_basic.php.skipif
<?php
if(!extension_loaded('gd')) {
    die('skip gd extension is not loaded');
}

if(!function_exists('imagecolorstotal') || !function_exists('imagecreatefromgif')) {
    die('skip imagecolorstotal and imagecreatefromgif functions not available in this build');
}
?> 