hphp/test/zend/bad/ext/soap/tests/bugs/bug34657.php.skipif
<?php 
require_once('skipif.inc'); 
if (extension_loaded("openssl")) {
	/* 
	 when openssl loaded, tcp stream is less verbose, so some error messages are missing 
	 so let's skip the test in this case  
	 */
	die("skip OpenSSL extension required");
}
?>